# ESP32-Honeypot

./: .gitignore  ESP32-Honeypot-M5StackC6.ino  ESP32-Honeypot-atomS3.ino  ESP32-Honeypot.ino  README.md
ESP32-C5-Honeypot/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
ESP32-C5-Honeypot/components/honeypot/: CMakeLists.txt
ESP32-C5-Honeypot/components/honeypot/include/: config.h  file_system.h  honeypot.h  telnet_server.h  web_server.h
ESP32-C5-Honeypot/components/honeypot/src/: config.c  file_system.c  honeypot.c  html_content.c  telnet_server.c  web_server.c
ESP32-C5-Honeypot/main/: CMakeLists.txt  main.c
